--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,43 +1,59 @@
-name: Build Serotonin
+name: Build and Package
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: macos-13
+    name: Build Bootstrap
+    runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: true
 
-    - name: Update submodules
-      run: git submodule update --init --recursive
-      
-    - name: Switch to Xcode 15
-      run: sudo xcode-select -s /Applications/Xcode_15.0.app
+      - name: Install Theos
+        run: bash -c "$(curl -fsSL https://raw.githubusercontent.com/roothide/theos/master/bin/install-theos)"
 
-    - name: Install theos
-      run: bash -c "$(curl -fsSL https://raw.githubusercontent.com/roothide/theos/master/bin/install-theos)"
+      - name: Setup Environment
+        run: echo "THEOS=~/theos" >> $GITHUB_ENV
 
-    - name: Download ct_bypass to /usr/local/bin
-      run: |
-        curl -L -o /usr/local/bin/ct_bypass https://cdn.mineek.dev/serotonin/action_deps/ct_bypass
-        chmod +x /usr/local/bin/ct_bypass
+      - name: Make Bootstrap Package
+        run: make package
 
-    - name: Install ldid
-      run: |
-        brew unlink ldid
-        brew install ldid-procursus
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Bootstrap.tipa
+          path: ./packages/Bootstrap.tipa
+  update-release:
+    name: Release .tipa
+    runs-on: ubuntu-latest
+    needs: build
 
-    - name: Compile IPA
-      run: |
-        export THEOS=/Users/runner/theos
-        make
-
-    - name: Upload IPA
-      uses: actions/upload-artifact@v2
+    steps:
+    - name: Delete old release
+      uses: dev-drprasad/delete-tag-and-release@v0.2.1
       with:
-        name: Serotonin.tipa
-        path: Serotonin.tipa
+        delete_release: true
+        tag_name: release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Get artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: Bootstrap.tipa
+    - name: Create new release
+      uses: ncipollo/release-action@v1
+      with:
+        name: Rolling Release
+        body: These are automatically updated builds of the latest commit.
+        artifacts: "Bootstrap.tipa"
+        tag: release
+        token: ${{ secrets.GITHUB_TOKEN }}
